tests/invalid/import_from_call_non_function/provider.py
class value:
    n: int

    def __init__(self, n: int) -> None:
        self.n = n
